# sid-ci

./: Dockerfile_grpcwebproxy  README.md  docker-compose.yaml  grpcwebproxy.yaml  skaffold.yaml
client/: go.mod  go.sum
daemon/: Dockerfile  Dockerfile_debug  git-exe.sh  loop.py  main.py  pod.yaml  pyproject.toml  settings.py  sid_pb2.py  sid_pb2_grpc.py
db/: .dockerignore  Dockerfile  pod.yaml  schema.sql  test-data.sql
fake_git_agent/: Dockerfile  be-a-dev.sh  pod.yaml
fake_git_agent/server/: Dockerfile  pod.yaml
fake_git_agent/server/fake_keys/: id_rsa  id_rsa.pub  secret.yaml
fake_git_agent/server/repos/bar-svc/: Dockerfile
fake_git_agent/server/repos/bar-svc/git/: index
fake_git_agent/server/repos/bar-svc/git/logs/refs/heads/: master
fake_git_agent/server/repos/bar-svc/git/refs/heads/: master
fake_git_agent/server/repos/foo-app/: Dockerfile
fake_git_agent/server/repos/foo-app/git/: COMMIT_EDITMSG  index
fake_git_agent/server/repos/foo-app/git/logs/refs/heads/: master
fake_git_agent/server/repos/foo-app/git/refs/heads/: master
server/: .dockerignore  Dockerfile  Dockerfile_debug  go.mod  go.sum  main.go  pod.yaml
server/pkg/db/: db.go
sid/: README.md  gen.sh  sid.pb.go  sid.proto
ui/: package.json  tsconfig.json
ui/src/: App.tsx  index.tsx  store.ts
ui/src/actions/: index.ts  jobs.ts  repos.ts
ui/src/components/: RepoInfo.tsx  RepoJobs.tsx  Repos.tsx
ui/src/middleware/: grpc.ts
ui/src/proto/: sid_pb.d.ts  sid_pb.js  sid_pb_service.d.ts  sid_pb_service.js
ui/src/reducers/: jobs.ts  repos.ts
